# Astronomical

./: .gitignore  BUG.md  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  example.py  pre-commit  pyproject.toml
astronomical/: __init__.py  astronomical.py  globals.py  location.py  logging.py  physics.py  sleep.py  sun.py
astronomical/interface/: cli.py  configuration.py
astronomical/interfaces/: __init__.py  alarms.py  cli.py  cli_arguments.py  location.py  sun.py  time.py
astronomical/model/: __init__.py  celestials.py  configuration.py  custom_types.py  location.py  mechanics.py  physics.py  real_world_calculations.py  solar_system.py
astronomical/service/: configuration.py  logging.py  requirements.py
astronomical/services/: __init__.py  celestial_mechanics.py  mechanics.py  orbittal_mechanics.py  physics.py  rotational_mechanics.py  solar_system.py
astronomical/utils/: __init__.py  configuration.py  logging.py
docs/: logging.md
img/src/: full_design.drawio  sleep_flow  sleep_flow.drawio
tests/: test_astronomical.py  test_astronomical_old.py
tests/data/: config.ini
tests/interface/: test_configuration.py  test_interface_configuration.py
tests/model/: test_celestials.py  test_configuration.py  test_mechanics.py  test_model_configuration.py  test_model_mechanics.py  test_model_physics.py  test_physics.py
tests/services/: test_mechanics.py  test_physics.py
