[tool.poetry]
name = "astronomical"
version = "0.1.0"
description = "Library of utilities related to astronomical movements."
authors = ["TheOrganist24 <programming@courtman.me.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
suntime = "^1.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
