[tool.poetry]
name = "astronomical"
version = "0.5.0"
description = "Library of utilities related to astronomical movements."
authors = ["TheOrganist24 <code@theorganist24.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
suntime = "^1.2.5"
pytz = "^2021.3"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-cov = "^3.0.0"
mypy = "^0.931"
types-pytz = "^2021.3.4"
pycodestyle = "^2.8.0"
pydocstyle = "^6.1.1"
toml = "^0.10.2"
loguru-mypy = "^0.0.4"
isort = "^5.10.1"
pyclean = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
astronomical = "astronomical.interface.cli:main"
